# ESP32epdx-idf

./: CMakeLists.txt  README.md
examples/2-Colors-BW/0.97/GDEM0097T61/: EPD.cpp  EPD.h  GDEM0097T61.ino  IMAGE.h
examples/2-Colors-BW/1.02/GDEW0102T4/: EPD.cpp  EPD.h  GDEW0102T4.ino  IMAGE.h
examples/2-Colors-BW/1.22/GDEM0122T61/: EPD.cpp  EPD.h  GDEM0122T61.ino  IMAGE.h
examples/2-Colors-BW/1.54/GDEM0154I61/: EPD.cpp  EPD.h  GDEM0154I61.ino  IMAGE.h
examples/2-Colors-BW/1.54/GDEY0154D67/: EPD.cpp  EPD.h  GDEY0154D67.ino
examples/2-Colors-BW/2.13/GDEM0213I61/: EPD.cpp  EPD.h  GDEM0213I61.ino
examples/2-Colors-BW/2.13/GDEY0213B74/: EPD.cpp  EPD.h  GDEY0213B74.ino
examples/2-Colors-BW/2.13/GDEY0213D32LT/: EPD.cpp  EPD.h  GDEY0213D32LT.ino  IMAGE.h
examples/2-Colors-BW/2.15/GDEW0215T11/: EPD.cpp  EPD.h  GDEW0215T11.ino  IMAGE.h
examples/2-Colors-BW/2.66/GDEY0266T90/: EPD.cpp  EPD.h  GDEY0266T90.ino  IMAGE.h
examples/2-Colors-BW/2.66/GDEY0266T90H/: EPD.cpp  EPD.h  GDEY0266T90H.ino  IMAGE.h
examples/2-Colors-BW/2.7/GDEM027Q72/: EPD.cpp  EPD.h  GDEM027Q72.ino  IMAGE.h
examples/2-Colors-BW/2.7/GDEY027T91/: EPD.cpp  EPD.h  GDEY027T91.ino  IMAGE.h
examples/2-Colors-BW/2.9/GDEY029T71H/: EPD.cpp  EPD.h  GDEY029T71H.ino  IMAGE.h
examples/2-Colors-BW/2.9/GDEY029T94/: EPD.h  GDEY029T94.ino  IMAGE.h
examples/2-Colors-BW/3.1/GDEQ031T10/: EPD.cpp  EPD.h  GDEQ031T10.ino  IMAGE.h
src/: EPD_SPI.cpp  ESP32epdx.h
src/EPD/: EPD_SPI.cpp  EPD_SPI.h
src/Fonts/: font12CN.cpp  font24CN.cpp  fonts.h
src/GUI/: GUI_Paint.cpp
(+156 files in other folders)
